--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "wavesurfer.js": "^6.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
