--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.62.0",
-    "wavesurfer.js": "^6.6.3"
+    "sass": "^1.62.0"
   },
   "scripts": {
     "start": "react-scripts start",
